updating the index file with divs inside the header and footer so the ul can be rearranged inside

--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
   </head>
   <body>
     <header>
-      <ul class="left_links">
-        <li>
-          <a href="https://about.google/">About</a>
-        </li>
-      </ul>
-      <ul class="right_links">
-        <ul class="text_links">
+      <div>
+        <ul class="left_links">
+          <li>
+            <a href="https://about.google/">About</a>
+          </li>
+        </ul>
+        <ul class="right_links">
           <li>
             <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl">Mail</a>
           </li>
           <li>
             <a href="https://www.google.com.co/imghp?hl=en&tab=ri&ogbl">Images</a>
           </li>
-        </ul>
-        <ul class="logo_links">
           <li class="google_apps">
             <a class ="google_products" href="https://www.google.com.co/intl/en/about/products?tab=rh">
               <img alt="Google apps" src="https://cdn1.imggmi.com/uploads/2019/8/19/7f5497f797a982863d7b6919ff6b1ced-full.png">
@@ -32,7 +30,7 @@
             </a>
           </li>
         </ul>
-      </ul>
+      </div>
     </header>
     <main>
       <div class="google_img">
@@ -46,29 +44,31 @@
         <button class="buttons" form="search_box" name="google_search">I'm Feeling Lucky</button>
       </div>
     </main>
-   <footer>
-      <ul class="left_links">
-        <li>
-          <a href="https://ads.google.com/intl/es-419_co/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
-        </li>
-        <li>
-            <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a>
-        </li>
-        <li>
-            <a href="https://about.google/?utm_source=google-CO&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a>
-        </li>
-      </ul>
-      <ul class="right_links">
-        <li>
-            <a href="https://policies.google.com/privacy?fg=1">Privicy</a>
+    <footer>
+      <div>
+        <ul class="left_links">
+          <li>
+            <a href="https://ads.google.com/intl/es-419_co/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
           </li>
           <li>
-              <a href="https://policies.google.com/terms?fg=1">Terms</a>
+              <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a>
           </li>
           <li>
-              <a href="">Settings</a>
+              <a href="https://about.google/?utm_source=google-CO&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a>
           </li>
-      </ul>
-   </footer>
+        </ul>
+        <ul class="right_links">
+          <li>
+              <a href="https://policies.google.com/privacy?fg=1">Privacy</a>
+            </li>
+            <li>
+                <a href="https://policies.google.com/terms?fg=1">Terms</a>
+            </li>
+            <li>
+                <a href="">Settings</a>
+            </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
