Footer and Header ready to go

--- a/index.html
+++ b/index.html
@@ -46,28 +46,16 @@
     </main>
     <footer>
       <div>
-        <ul class="left_links">
-          <li>
-            <a href="https://ads.google.com/intl/es-419_co/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
-          </li>
-          <li>
-              <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a>
-          </li>
-          <li>
-              <a href="https://about.google/?utm_source=google-CO&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a>
-          </li>
-        </ul>
-        <ul class="right_links">
-          <li>
-              <a href="https://policies.google.com/privacy?fg=1">Privacy</a>
-            </li>
-            <li>
-                <a href="https://policies.google.com/terms?fg=1">Terms</a>
-            </li>
-            <li>
-                <a href="">Settings</a>
-            </li>
-        </ul>
+        <span class="left_links">
+          <a href="https://ads.google.com/intl/es-419_co/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+          <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1#?modal_active=none">Business</a>
+          <a href="https://about.google/?utm_source=google-CO&utm_medium=referral&utm_campaign=hp-footer&fg=1">About</a>
+        </span>
+        <span class="right_links">
+          <a href="https://policies.google.com/privacy?fg=1">Privacy</a>
+          <a href="https://policies.google.com/terms?fg=1">Terms</a>
+          <a href="">Settings</a>
+        </span>
       </div>
     </footer>
   </body>
