Centering the main div

--- a/index.html
+++ b/index.html
@@ -8,26 +8,16 @@
     <header>
       <div>
         <ul class="left_links">
-          <li>
-            <a href="https://about.google/">About</a>
-          </li>
+          <li><a href="https://about.google/">About</a></li>
         </ul>
         <ul class="right_links">
-          <li>
-            <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl">Mail</a>
+          <li><a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl">Mail</a></li>
+          <li><a href="https://www.google.com.co/imghp?hl=en&tab=ri&ogbl">Images</a></li>
+          <li class="google_apps"><a class ="google_products" href="https://www.google.com.co/intl/en/about/products?tab=rh">
+              <img alt="Google apps" src="https://cdn1.imggmi.com/uploads/2019/8/19/7f5497f797a982863d7b6919ff6b1ced-full.png"></a>
           </li>
-          <li>
-            <a href="https://www.google.com.co/imghp?hl=en&tab=ri&ogbl">Images</a>
-          </li>
-          <li class="google_apps">
-            <a class ="google_products" href="https://www.google.com.co/intl/en/about/products?tab=rh">
-              <img alt="Google apps" src="https://cdn1.imggmi.com/uploads/2019/8/19/7f5497f797a982863d7b6919ff6b1ced-full.png">
-            </a>
-          </li>
-          <li>
-            <a href="https://accounts.google.com/">
-              <button class="sign-in">Sign in</button>
-            </a>
+          <li><a href="https://accounts.google.com/">
+              <button class="sign-in">Sign in</button></a>
           </li>
         </ul>
       </div>
